--- a/TextTrade/app/build.gradle
+++ b/TextTrade/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.6.0'
     compile 'com.google.firebase:firebase-crash:11.6.0'
     compile 'com.google.firebase:firebase-auth:11.6.0'
+    compile 'com.firebaseui:firebase-ui-auth:3.1.0'
 
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestCompile 'com.android.support.test:rules:1.0.1'
@@ -61,6 +62,9 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
+
 
 
 
